--- a/kube/mssql.yaml
+++ b/kube/mssql.yaml
@@ -34,7 +34,7 @@ spec:
 apiVersion: v1
 kind: Secret
 stringData:
-    MSSQL_SA_PASSWORD: "MyC0m9l&xP@ssw0rd"
+    MSSQL_SA_PASSWORD: MyC0m9l&xP@ssw0rd
 metadata:
     name: mssql-secret
 type: Opaque
