1st migration, youpi!

--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:my-server;Database=BulkyBook;Trusted_Connection:True;"
+    "DefaultConnection": "Server=kube-sarye.francecentral.cloudapp.azure.com,32000;Database=BulkyBook;User Id=sa;Password=MyC0m9l&xP@ssw0rd;"
   }
 }
