--- a/BulkyBook.Web/BulkyBook.Web.csproj
+++ b/BulkyBook.Web/BulkyBook.Web.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BulkyBook.DataAccess\BulkyBook.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
