--- a/BulkyBook.Utility/BulkyBook.Utility.csproj
+++ b/BulkyBook.Utility/BulkyBook.Utility.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MailKit" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.1" />
     <PackageReference Include="MimeKit" Version="3.1.0" />
+    <PackageReference Include="SendGrid" Version="9.25.2" />
   </ItemGroup>
 
 </Project>
